<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable ="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
        <string name="pref_location_label">Location</string>

        <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_location_key" translatable="false">location</string>

        <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
        <string name="pref_location_default" translatable="false">94043</string>


    <!-- Label for the temperature preferences-->
    <string name="temperature" translatable="false">Temperature</string>
    <string name="title_temperature" translatable="false">Temperature units</string>
    <string name="List_units_key" translatable="false">Temperature</string>
    <string name="pref_units" translatable="false">pref units</string>
    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
