<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/List_units_key"
        android:title="@string/title_temperature"
        android:defaultValue="@string/pref_units"
        android:entries="@array/units"
        android:entryValues="@array/units"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true" />

</PreferenceScreen>
